src/grammar/SqlSealLangParser.ts
// Generated from SqlSealLang.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SqlSealLangListener } from "./SqlSealLangListener";
import { SqlSealLangVisitor } from "./SqlSealLangVisitor";


export class SqlSealLangParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly TABLE = 5;
	public static readonly FILE = 6;
	public static readonly WITH = 7;
	public static readonly AS = 8;
	public static readonly SELECT = 9;
	public static readonly ID = 10;
	public static readonly FILE_URL = 11;
	public static readonly WS = 12;
	public static readonly ANY = 13;
	public static readonly RULE_parse = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_tableStatement = 2;
	public static readonly RULE_queryStatement = 3;
	public static readonly RULE_withClause = 4;
	public static readonly RULE_cteDefinition = 5;
	public static readonly RULE_selectStatement = 6;
	public static readonly RULE_selectBody = 7;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parse", "statement", "tableStatement", "queryStatement", "withClause", 
		"cteDefinition", "selectStatement", "selectBody",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'='", "'('", "')'", "','", "'TABLE'", "'file'", "'WITH'", 
		"'AS'", "'SELECT'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "TABLE", "FILE", 
		"WITH", "AS", "SELECT", "ID", "FILE_URL", "WS", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SqlSealLangParser._LITERAL_NAMES, SqlSealLangParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SqlSealLangParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SqlSealLang.g4"; }

	// @Override
	public get ruleNames(): string[] { return SqlSealLangParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SqlSealLangParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SqlSealLangParser._ATN, this);
	}
	// @RuleVersion(0)
	public parse(): ParseContext {
		let _localctx: ParseContext = new ParseContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SqlSealLangParser.RULE_parse);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 17;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 16;
				this.statement();
				}
				}
				this.state = 19;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SqlSealLangParser.TABLE) | (1 << SqlSealLangParser.WITH) | (1 << SqlSealLangParser.SELECT))) !== 0));
			this.state = 21;
			this.match(SqlSealLangParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SqlSealLangParser.RULE_statement);
		try {
			this.state = 25;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SqlSealLangParser.TABLE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 23;
				this.tableStatement();
				}
				break;
			case SqlSealLangParser.WITH:
			case SqlSealLangParser.SELECT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 24;
				this.queryStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tableStatement(): TableStatementContext {
		let _localctx: TableStatementContext = new TableStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SqlSealLangParser.RULE_tableStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 27;
			this.match(SqlSealLangParser.TABLE);
			this.state = 29;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 28;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 31;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SqlSealLangParser.WS);
			this.state = 33;
			this.match(SqlSealLangParser.ID);
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 34;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 40;
			this.match(SqlSealLangParser.T__0);
			this.state = 44;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 41;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 46;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 47;
			this.match(SqlSealLangParser.FILE);
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 48;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 54;
			this.match(SqlSealLangParser.T__1);
			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 55;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 61;
			this.match(SqlSealLangParser.FILE_URL);
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 62;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 68;
			this.match(SqlSealLangParser.T__2);
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 69;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public queryStatement(): QueryStatementContext {
		let _localctx: QueryStatementContext = new QueryStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SqlSealLangParser.RULE_queryStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlSealLangParser.WITH) {
				{
				this.state = 75;
				this.withClause();
				}
			}

			this.state = 78;
			this.selectStatement();
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 79;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public withClause(): WithClauseContext {
		let _localctx: WithClauseContext = new WithClauseContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SqlSealLangParser.RULE_withClause);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(SqlSealLangParser.WITH);
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 86;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SqlSealLangParser.WS);
			this.state = 91;
			this.cteDefinition();
			this.state = 108;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 95;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === SqlSealLangParser.WS) {
						{
						{
						this.state = 92;
						this.match(SqlSealLangParser.WS);
						}
						}
						this.state = 97;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 98;
					this.match(SqlSealLangParser.T__3);
					this.state = 102;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === SqlSealLangParser.WS) {
						{
						{
						this.state = 99;
						this.match(SqlSealLangParser.WS);
						}
						}
						this.state = 104;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 105;
					this.cteDefinition();
					}
					}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			}
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 111;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 116;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cteDefinition(): CteDefinitionContext {
		let _localctx: CteDefinitionContext = new CteDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SqlSealLangParser.RULE_cteDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(SqlSealLangParser.ID);
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 118;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SqlSealLangParser.WS);
			this.state = 123;
			this.match(SqlSealLangParser.AS);
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 124;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 130;
			this.match(SqlSealLangParser.T__1);
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 131;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 137;
			this.selectStatement();
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SqlSealLangParser.WS) {
				{
				{
				this.state = 138;
				this.match(SqlSealLangParser.WS);
				}
				}
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 144;
			this.match(SqlSealLangParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectStatement(): SelectStatementContext {
		let _localctx: SelectStatementContext = new SelectStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SqlSealLangParser.RULE_selectStatement);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(SqlSealLangParser.SELECT);
			this.state = 148;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 147;
					this.match(SqlSealLangParser.WS);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 150;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			this.state = 152;
			this.selectBody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectBody(): SelectBodyContext {
		let _localctx: SelectBodyContext = new SelectBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SqlSealLangParser.RULE_selectBody);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 154;
					this.matchWildcard();
					}
					}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SqlSealLangParser.__ATN) {
			SqlSealLangParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SqlSealLangParser._serializedATN));
		}

		return SqlSealLangParser.__ATN;
	}

}

export class ParseContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(SqlSealLangParser.EOF, 0); }
	public statement(): StatementContext[];
	public statement(i: number): StatementContext;
	public statement(i?: number): StatementContext | StatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StatementContext);
		} else {
			return this.getRuleContext(i, StatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_parse; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterParse) {
			listener.enterParse(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitParse) {
			listener.exitParse(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitParse) {
			return visitor.visitParse(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	public tableStatement(): TableStatementContext | undefined {
		return this.tryGetRuleContext(0, TableStatementContext);
	}
	public queryStatement(): QueryStatementContext | undefined {
		return this.tryGetRuleContext(0, QueryStatementContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_statement; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterStatement) {
			listener.enterStatement(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitStatement) {
			listener.exitStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TableStatementContext extends ParserRuleContext {
	public TABLE(): TerminalNode { return this.getToken(SqlSealLangParser.TABLE, 0); }
	public ID(): TerminalNode { return this.getToken(SqlSealLangParser.ID, 0); }
	public FILE(): TerminalNode { return this.getToken(SqlSealLangParser.FILE, 0); }
	public FILE_URL(): TerminalNode { return this.getToken(SqlSealLangParser.FILE_URL, 0); }
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SqlSealLangParser.WS);
		} else {
			return this.getToken(SqlSealLangParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_tableStatement; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterTableStatement) {
			listener.enterTableStatement(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitTableStatement) {
			listener.exitTableStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitTableStatement) {
			return visitor.visitTableStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class QueryStatementContext extends ParserRuleContext {
	public selectStatement(): SelectStatementContext {
		return this.getRuleContext(0, SelectStatementContext);
	}
	public withClause(): WithClauseContext | undefined {
		return this.tryGetRuleContext(0, WithClauseContext);
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SqlSealLangParser.WS);
		} else {
			return this.getToken(SqlSealLangParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_queryStatement; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterQueryStatement) {
			listener.enterQueryStatement(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitQueryStatement) {
			listener.exitQueryStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitQueryStatement) {
			return visitor.visitQueryStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class WithClauseContext extends ParserRuleContext {
	public WITH(): TerminalNode { return this.getToken(SqlSealLangParser.WITH, 0); }
	public cteDefinition(): CteDefinitionContext[];
	public cteDefinition(i: number): CteDefinitionContext;
	public cteDefinition(i?: number): CteDefinitionContext | CteDefinitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(CteDefinitionContext);
		} else {
			return this.getRuleContext(i, CteDefinitionContext);
		}
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SqlSealLangParser.WS);
		} else {
			return this.getToken(SqlSealLangParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_withClause; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterWithClause) {
			listener.enterWithClause(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitWithClause) {
			listener.exitWithClause(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitWithClause) {
			return visitor.visitWithClause(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class CteDefinitionContext extends ParserRuleContext {
	public ID(): TerminalNode { return this.getToken(SqlSealLangParser.ID, 0); }
	public AS(): TerminalNode { return this.getToken(SqlSealLangParser.AS, 0); }
	public selectStatement(): SelectStatementContext {
		return this.getRuleContext(0, SelectStatementContext);
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SqlSealLangParser.WS);
		} else {
			return this.getToken(SqlSealLangParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_cteDefinition; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterCteDefinition) {
			listener.enterCteDefinition(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitCteDefinition) {
			listener.exitCteDefinition(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitCteDefinition) {
			return visitor.visitCteDefinition(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SelectStatementContext extends ParserRuleContext {
	public SELECT(): TerminalNode { return this.getToken(SqlSealLangParser.SELECT, 0); }
	public selectBody(): SelectBodyContext {
		return this.getRuleContext(0, SelectBodyContext);
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SqlSealLangParser.WS);
		} else {
			return this.getToken(SqlSealLangParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_selectStatement; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterSelectStatement) {
			listener.enterSelectStatement(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitSelectStatement) {
			listener.exitSelectStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitSelectStatement) {
			return visitor.visitSelectStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SelectBodyContext extends ParserRuleContext {
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SqlSealLangParser.RULE_selectBody; }
	// @Override
	public enterRule(listener: SqlSealLangListener): void {
		if (listener.enterSelectBody) {
			listener.enterSelectBody(this);
		}
	}
	// @Override
	public exitRule(listener: SqlSealLangListener): void {
		if (listener.exitSelectBody) {
			listener.exitSelectBody(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SqlSealLangVisitor<Result>): Result {
		if (visitor.visitSelectBody) {
			return visitor.visitSelectBody(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


